TEST_PROGRAMS/VALID/05/unary_minus.go
/* Unary minus. */

package main

var x int

func main() {
	-x
}
