TEST_PROGRAMS/INVALID/12/parser_declaration_invalid1.go
/* syntax errors for declarations */
/* puts type before id */
package basic

var int x = 10

func foo (x int) {
	println(x)
}
